Fix scrollbar on mobile devices

--- a/src/components/game-ui/episode/style.css
+++ b/src/components/game-ui/episode/style.css
@@ -15,6 +15,17 @@
   position: relative;
 }
 
+@media (min-width: 320px) and (max-width: 480px) {
+  .episode {
+    width: 100%;
+  }
+
+  .episode::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+
 .paragraphWrapper {
   width: 100%;
 }
